--- a/src/assets/styles/AboutSection.css
+++ b/src/assets/styles/AboutSection.css
@@ -1,4 +1,4 @@
-.about-section {
+.dark .about-section {
   padding: 4rem 1rem;
   background-color: var(--background-dark);
   color: var(--text-light);
@@ -6,9 +6,12 @@
   justify-content: center;
 }
 
-body:not(.dark) .about-section {
+.light .about-section {
+  padding: 4rem 1rem;
   background-color: var(--background-light);
   color: var(--text-dark);
+  display: flex;
+  justify-content: center;
 }
 
 .about-container {
